# OdooTerminal

./: .editorconfig  .eslintignore  .eslintrc.yml  .flowconfig  .gitignore  .lintstagedrc  .pre-commit-config.yaml  .prettierignore  .prettierrc.yml  .travis.yml  ADMIN_DOCUMENTATION.md  CHANGELOG.md  COMMAND_RECOMMENDATIONS.md  DEV_INFO.md  INSTALLATION.md  LICENSE  OdooTerminal.code-workspace  QUICKSTART_UPDATE.md  README-how-to-install.md  README.md  ROADMAP.md  background.js  content_script.js  eslint.config.mjs  flow-typed.config.json  globals.js  jest-puppeteer.config.cjs  manifest.json  package-lock.json  package.json  page_script.js  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  rollup.config.mjs
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci-12ce.yml  ci-13ce.yml  ci-14ce.yml  ci-15ce.yml  ci.yml  test.yml  (+2 more)
.husky/: pre-commit  pre-push
backups/: translation.es.json.tmp
docs/: contributing.md  developing.md  example_funcs.js  javascript.md  recommendations.md  testing.md  translations.md  trash.md
samples/: clean_dead_modules.tsh  flood_barcode.tsh  game_of_life.tsh
scripts/: build.mjs  check_pet_stimuli_regex.mjs  release.mjs
settings/: options.css  options.html  options.js
tests/: __init__.py  __main__.py  common.py  conftest.py  custom-environment.js  extension.test.js  jest-global-setup.js  jest-global-teardown.js  requirements.txt  test_chrome.py  test_extension.py  test_firefox.py  test_selenium.py
themes/: dark.json  hacker.json  light.json  matrix.json  odoo.json  tech.json
tools/: release.py
(+510 files in other folders)
