[tool.poetry]
name = "OdooTerminal"
version = "10.1.1"
description = "All the power of Odoo json-rpc in a really easy way!"
authors = ["Alexandre D. Díaz <dev@redneboa.es>"]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
selenium = "^4.11.0"
webdriver-manager = "^4.0.0"
python-on-whales = "^0.64.0"
GitPython = "^3.1.32"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
