[tool.poetry]
name = "OdooTerminal Tests"
version = "10.2.0"
description = "OdooTerminal Test Environment Packages"
authors = ["Alexandre D. Díaz <dev@redneboa.es>"]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
selenium = "4.11.2"
webdriver-manager = "^4.0.0"
python-on-whales = "^0.64.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
