[tool.poetry]
name = "OdooTerminal Tests"
description = "OdooTerminal Test Environment Packages"
authors = ["Alexandre D. Díaz <dev@redneboa.es>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.dev-dependencies]
pytest = "^8.2.2"
selenium = "4.22.0"
webdriver-manager = "^4.0.1"
python-on-whales = "^0.71.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
